--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="space-y-2">
       <h2 class="text-xl font-semibold">How to Play</h2>
       <p class="text-sm text-gray-700">
-        Each day we publish unadulterated output from an AI containing an error — your job is to find it!
+        Each day we publish unadulterated output from an AI. See if you can spot an issue with it!
       </p>
     </section>
   </main>
