--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AI Daily Detective</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      padding-bottom: 40px; /* space at bottom */
+    }
+  </style>
 </head>
 <body class="bg-gray-50 text-gray-900">
   <main class="mx-auto max-w-3xl space-y-6 p-4">
