--- a/mission.html
+++ b/mission.html
@@ -3,63 +3,60 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Carousel</title>
-
 <style>
   body { margin:0; font-family:system-ui, sans-serif; background:#fff; }
   .wrap { max-width:900px; margin:0 auto; padding:16px; }
   .frame { position:relative; overflow:hidden; border:1px solid #e5e5e5; border-radius:12px; }
-  .track { display:flex; transition:transform 240ms ease; touch-action:pan-y; }
+  .track { display:flex; transition:transform 240ms ease; }
   .slide { flex:0 0 100%; display:flex; align-items:center; justify-content:center; padding:12px; }
   canvas { width:100%; height:auto; display:block; }
   .ctrls { display:flex; justify-content:space-between; align-items:center; gap:8px; margin-top:12px; }
   button { padding:10px 14px; border:1px solid #ddd; border-radius:10px; background:#fafafa; cursor:pointer; }
   button:disabled { opacity:.4; cursor:not-allowed; }
-  .dots { font-size:14px; color:#555; }
 </style>
 
 <div class="wrap">
-  <div class="frame">
-    <div id="track" class="track"></div>
-  </div>
+  <div class="frame"><div id="track" class="track"></div></div>
   <div class="ctrls">
     <button id="prev">← Prev</button>
-    <div class="dots" id="status">0 / 0</div>
+    <div id="status">0 / 0</div>
     <button id="next">Next →</button>
   </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf.min.js" integrity="sha512-+Xl7H1E5V6n3Zb3y0pl7pQh6A9l4P5YqY4wqkE4YkC5m4Yc2G8rXwYqv0q8b7F0y1J0wP8r2n5r1Y0yS2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-  const FILE_URL = './mission.pdf'; // put your PDF here
+<script type="module">
+  import * as pdfjsLib from 'https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.mjs';
+  // Tell PDF.js where to load the worker from
+  pdfjsLib.GlobalWorkerOptions.workerSrc =
+    'https://cdn.jsdelivr.net/npm/pdfjs-dist@4.6.82/build/pdf.worker.mjs';
+
+  const FILE_URL = './mission.pdf'; // ensure this file exists here
   const track = document.getElementById('track');
   const statusEl = document.getElementById('status');
   const btnPrev = document.getElementById('prev');
   const btnNext = document.getElementById('next');
-  let pageCount = 0, idx = 0, startX = 0, curX = 0, dragging = false;
+  let pageCount = 0, idx = 0;
 
-  pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.5.136/pdf.worker.min.js';
+  const pdf = await pdfjsLib.getDocument(FILE_URL).promise;
+  pageCount = pdf.numPages;
 
-  pdfjsLib.getDocument(FILE_URL).promise.then(async pdf => {
-    pageCount = pdf.numPages;
-    for (let p = 1; p <= pageCount; p++) {
-      const page = await pdf.getPage(p);
-      const viewport = page.getViewport({ scale: 1.8 }); // adjust for sharpness
-      const canvas = document.createElement('canvas');
-      const ctx = canvas.getContext('2d', { alpha:false });
-      canvas.width = viewport.width;
-      canvas.height = viewport.height;
-      await page.render({ canvasContext: ctx, viewport }).promise;
+  for (let p = 1; p <= pageCount; p++) {
+    const page = await pdf.getPage(p);
+    const viewport = page.getViewport({ scale: 1.8 });
+    const canvas = document.createElement('canvas');
+    const ctx = canvas.getContext('2d', { alpha:false });
+    canvas.width = viewport.width;
+    canvas.height = viewport.height;
+    await page.render({ canvasContext: ctx, viewport }).promise;
 
-      const slide = document.createElement('div');
-      slide.className = 'slide';
-      slide.appendChild(canvas);
-      track.appendChild(slide);
-    }
-    update();
-  });
+    const slide = document.createElement('div');
+    slide.className = 'slide';
+    slide.appendChild(canvas);
+    track.appendChild(slide);
+  }
 
   function update() {
-    track.style.transform = `translateX(${idx * -100}%)`;
+    track.style.transform = `translateX(${-idx * 100}%)`;
     statusEl.textContent = `${idx + 1} / ${pageCount}`;
     btnPrev.disabled = idx === 0;
     btnNext.disabled = idx >= pageCount - 1;
@@ -70,24 +67,6 @@
     if (e.key === 'ArrowRight') btnNext.click();
     if (e.key === 'ArrowLeft') btnPrev.click();
   });
-
-  // basic touch swipe
-  track.addEventListener('pointerdown', e => { dragging = true; startX = e.clientX; track.setPointerCapture(e.pointerId); });
-  track.addEventListener('pointermove', e => {
-    if (!dragging) return;
-    curX = e.clientX;
-    const dx = curX - startX;
-    track.style.transition = 'none';
-    track.style.transform = `translateX(calc(${idx * -100}% + ${dx}px))`;
-  });
-  track.addEventListener('pointerup', e => {
-    track.style.transition = 'transform 240ms ease';
-    const dx = curX - startX;
-    if (Math.abs(dx) > 80) {
-      if (dx < 0 && idx < pageCount - 1) idx++;
-      if (dx > 0 && idx > 0) idx--;
-    }
-    dragging = false; startX = curX = 0; update();
-  });
+  update();
 </script>
 </html>
