--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <section class="space-y-2">
       <h2 class="text-xl font-semibold">How to Play</h2>
       <p class="text-sm text-gray-700">
-        Each day we publish unadulterated output from an AI. See if you can spot an issue with it!
+        Each day we publish unedited output from an AI — see if you can spot the issue! It’s a simple experiment to help encourage critical thinking when using AI. <a href="https://drive.google.com/file/d/1Usqv0ULMnLDwBtDiH0dIGW3l558oPf1V/view" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline">
+      Read about our Mission
       </p>
     </section>
   </main>
