--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Daily Detective</title>
+  <title>AI Detective</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -14,7 +14,7 @@
 <body class="bg-gray-50 text-gray-900">
   <main class="mx-auto max-w-3xl space-y-6 p-4">
     <!-- Title with half the padding -->
-    <h1 class="py-3 text-3xl font-bold">AI Daily Detective</h1>
+    <h1 class="py-3 text-3xl font-bold">AI Detective</h1>
 
     <section id="game" class="rounded-2xl border bg-white p-4 shadow-sm">
       <div id="question" class="pb-2 text-sm text-gray-500"></div>
@@ -33,7 +33,7 @@
     <section class="space-y-2">
       <h2 class="text-xl font-semibold">How to Play</h2>
       <p class="text-sm text-gray-700">
-        Each day we publish unedited output from an AI — see if you can spot an issue! It’s an experimental concept to help encourage critical thinking when using AI. <a href="https://drive.google.com/file/d/1Usqv0ULMnLDwBtDiH0dIGW3l558oPf1V/view" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline">
+        Every week we publish unedited output from an AI — see if you can spot an issue! It’s an experimental concept to help encourage critical thinking when using AI. <a href="https://drive.google.com/file/d/1Usqv0ULMnLDwBtDiH0dIGW3l558oPf1V/view" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline">
       Discover our Mission
       </p>
     </section>
