--- a/index.html
+++ b/index.html
@@ -3,181 +3,139 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Critique — Prototype</title>
+  <title>AI Critique</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { padding-bottom: 40px; }
-    .pill { @apply rounded-xl border px-3 py-2 text-sm hover:bg-gray-50; }
-    .pill-selected { @apply bg-black text-white border-black; }
-  </style>
+  <style> body { padding-bottom: 40px; } </style>
 </head>
 <body class="bg-gray-50 text-gray-900">
   <main class="mx-auto max-w-3xl p-4 space-y-6">
     <header class="pt-2">
       <h1 class="text-3xl font-bold">AI Critique</h1>
-      <p class="text-sm text-gray-600 mt-1">Read, pick the biggest weakness, then see how the evaluator judged it.</p>
+      <p class="text-sm text-gray-600 mt-1">Read, pick any weaknesses you see, then compare with our AI evaluator.</p>
     </header>
 
+    <!-- Play -->
     <section id="play" class="rounded-2xl border bg-white p-4 shadow-sm">
-      <div class="flex items-center justify-between gap-4">
-        <div class="text-xs text-gray-500">
-          <span id="questionTypeBadge" class="inline-block rounded-full bg-gray-100 px-2 py-1"></span>
-        </div>
-        <div class="text-xs text-gray-500" id="modelBadges"></div>
-      </div>
-
-      <h2 id="question" class="mt-2 text-lg font-semibold"></h2>
+      <h2 id="question" class="text-lg font-semibold"></h2>
       <blockquote id="answer" class="mt-2 rounded-2xl bg-gray-50 p-4 italic"></blockquote>
 
-      <div class="mt-3 text-sm text-gray-700">Pick the <span class="font-semibold">biggest weakness</span> you see:</div>
-      <div id="choices" class="mt-2 flex flex-wrap gap-2"></div>
+      <form id="choices" class="mt-2 space-y-2"></form>
 
       <div class="mt-4">
         <button id="submitBtn" class="rounded-xl bg-black px-4 py-2 text-sm text-white disabled:opacity-40" disabled>Submit</button>
       </div>
     </section>
 
+    <!-- Results -->
     <section id="results" class="hidden rounded-2xl border bg-white p-4 shadow-sm space-y-4">
-      <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2">
-        <h3 class="text-lg font-semibold">Results</h3>
-        <div id="scoreBadge" class="text-sm"></div>
+      <h3 class="text-lg font-semibold">Results</h3>
+
+      <div class="overflow-x-auto">
+        <table class="w-full text-sm border border-gray-200">
+          <thead class="bg-gray-100">
+            <tr>
+              <th class="text-left p-2 border-b">Weakness</th>
+              <th class="text-center p-2 border-b">You</th>
+              <th class="text-center p-2 border-b">Evaluator</th>
+            </tr>
+          </thead>
+          <tbody id="resultsTable"></tbody>
+        </table>
       </div>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
-        <div class="rounded-xl border p-3">
-          <div class="text-xs text-gray-500">Your pick</div>
-          <div id="yourPick" class="mt-1 text-sm font-medium"></div>
-        </div>
-        <div class="rounded-xl border p-3">
-          <div class="text-xs text-gray-500">Evaluator pick</div>
-          <div id="evaluatorPick" class="mt-1 text-sm font-medium"></div>
-          <div id="deductionsList" class="mt-2 text-xs text-gray-600"></div>
-        </div>
-      </div>
-
-      <div class="rounded-xl border p-3 bg-green-50" id="matchPanel">
-        <div id="matchLine" class="text-sm font-medium"></div>
+      <div class="rounded-xl border p-3 bg-gray-50">
+        <div class="text-sm font-medium">Evaluator summary</div>
         <div id="reasonLine" class="mt-1 text-sm"></div>
-        <div id="evidenceLine" class="mt-1 text-xs text-gray-600"></div>
-      </div>
-
-      <div class="rounded-xl border p-3">
-        <div class="text-xs text-gray-500 mb-1">Question type</div>
-        <div id="questionTypeLine" class="text-sm"></div>
-        <div id="teachingLine" class="mt-1 text-xs text-gray-600"></div>
       </div>
     </section>
 
-    <footer class="text-xs text-gray-500 pt-2">
-      Prototype. Educational use. Answers are model-generated and may be incorrect.
-    </footer>
+    <div class="text-[10px] text-gray-400 mt-6">
+      We use one AI model such as ChatGPT to generate an answer, then use another model such as Claude to evaluate the answer against specific criteria. It’s an experimental concept to help encourage critical thinking when using AI. May contain mistakes.
+    </div>
   </main>
 
-<script>
-(async function () {
-  const res = await fetch('content.json?d=' + Date.now());
-  const data = await res.json();
+  <script>
+  async function loadCase() {
+    const res = await fetch("content.json?d=" + Date.now());
+    const data = await res.json();
 
-  // ---- constants (keep in sync with content.json labels) ----
-  const LABELS = [
-    "Hallucination / factual error",
-    "Omission / incomplete coverage",
-    "Outdated / time-drift error",
-    "Off-topic / drift",
-    "Bias / overconfidence / tone issues"
-  ];
+    // Populate question and answer
+    document.getElementById('question').textContent = data.question;
+    document.getElementById('answer').textContent = data.ai_output;
 
-  // ---- populate play view ----
-  const qEl = document.getElementById('question');
-  const aEl = document.getElementById('answer');
-  const choicesEl = document.getElementById('choices');
-  const submitBtn = document.getElementById('submitBtn');
-  const resultsEl = document.getElementById('results');
+    // Build checkbox list (multi-select)
+    const form = document.getElementById('choices');
+    form.innerHTML = "";
+    const selected = new Set();
 
-  qEl.textContent = data.question;
-  aEl.textContent = data.ai_output;
+    (data.labels || []).forEach((label, idx) => {
+      const id = 'opt_' + idx;
+      const wrap = document.createElement('div');
+      wrap.className = 'flex items-start gap-2';
 
-  document.getElementById('questionTypeBadge').textContent = data.question_type;
-  document.getElementById('modelBadges').textContent =
-    `Answer: ${data.models.answered_by} · Evaluated by: ${data.models.evaluated_by}`;
+      const cb = document.createElement('input');
+      cb.type = 'checkbox';
+      cb.id = id; cb.value = label;
+      cb.className = 'mt-0.5 h-4 w-4 rounded border-gray-300 text-black focus:ring-black';
+      cb.addEventListener('change', () => {
+        if (cb.checked) selected.add(label); else selected.delete(label);
+        document.getElementById('submitBtn').disabled = selected.size === 0;
+      });
 
-  const btns = [];
-  let selected = null;
+      const lab = document.createElement('label');
+      lab.setAttribute('for', id);
+      lab.className = 'text-sm';
+      lab.textContent = label;
 
-  LABELS.forEach(label => {
-    const btn = document.createElement('button');
-    btn.type = 'button';
-    btn.className = 'pill';
-    btn.textContent = label;
-    btn.onclick = () => {
-      selected = label;
-      btns.forEach(b => b.classList.remove('pill-selected'));
-      btn.classList.add('pill-selected');
-      submitBtn.disabled = false;
+      wrap.appendChild(cb);
+      wrap.appendChild(lab);
+      form.appendChild(wrap);
+    });
+
+    // Submit → results
+    document.getElementById('submitBtn').onclick = () => {
+      const user = Array.from(selected);
+      const evalDeds = data.deductions || [];
+
+      const tableBody = document.getElementById('resultsTable');
+      tableBody.innerHTML = '';
+
+      (data.labels || []).forEach(label => {
+        const tr = document.createElement('tr');
+
+        const tdLabel = document.createElement('td');
+        tdLabel.className = 'p-2 border-b';
+        tdLabel.textContent = label;
+        tr.appendChild(tdLabel);
+
+        const tdUser = document.createElement('td');
+        tdUser.className = 'p-2 border-b text-center';
+        if (user.includes(label)) tdUser.textContent = '✔';
+        tr.appendChild(tdUser);
+
+        const tdEval = document.createElement('td');
+        tdEval.className = 'p-2 border-b text-center';
+        if (evalDeds.includes(label)) tdEval.textContent = '✔';
+        tr.appendChild(tdEval);
+
+        if (user.includes(label) && evalDeds.includes(label)) {
+          tr.classList.add('bg-green-50');
+        }
+
+        tableBody.appendChild(tr);
+      });
+
+      // Global rationale
+      document.getElementById('reasonLine').textContent = data.global_reason || '';
+
+      // Reveal
+      const resultsEl = document.getElementById('results');
+      resultsEl.classList.remove('hidden');
+      resultsEl.setAttribute('tabindex', '-1');
+      resultsEl.focus();
     };
-    btns.push(btn);
-    choicesEl.appendChild(btn);
-  });
-
-  // verdict band helper (derived from score)
-  function verdictBand(score) {
-    if (score >= 85) return 'Strong';
-    if (score >= 70) return 'Mixed';
-    if (score >= 50) return 'Weak';
-    return 'Flawed';
   }
-
-  function fmtList(arr) {
-    if (!arr || !arr.length) return 'None';
-    return arr.join(', ');
-  }
-
-  // ---- submit → show results ----
-  submitBtn.onclick = () => {
-    if (!selected) return;
-
-    // UI: compute match against evaluator's primary label
-    const primary = data.primary_label;
-    const allDeductions = data.deductions || [];
-
-    // Score badge
-    const score = data.score_pct;
-    const band = verdictBand(score);
-    const scoreBadge = document.getElementById('scoreBadge');
-    scoreBadge.innerHTML = `<span class="inline-block rounded-full bg-gray-100 px-2 py-1">Score ${score}/100 · ${band}</span>`;
-
-    // Picks
-    document.getElementById('yourPick').textContent = selected;
-    document.getElementById('evaluatorPick').textContent = primary;
-    document.getElementById('deductionsList').innerHTML =
-      `<div class="mt-1">All deductions: <span class="font-mono">${fmtList(allDeductions)}</span></div>`;
-
-    // Match panel
-    const match = selected === primary;
-    const matchLine = document.getElementById('matchLine');
-    const rationale = data.reason || '';
-    const evidence = data.evidence_hint && data.evidence_hint !== 'unknown'
-      ? `Evidence: ${data.evidence_hint}`
-      : 'No clear reference found.';
-    matchLine.textContent = match ? 'You matched the evaluator.' : 'Different to the evaluator.';
-    document.getElementById('reasonLine').textContent = `Why: ${rationale}`;
-    document.getElementById('evidenceLine').textContent = evidence;
-    document.getElementById('matchPanel').className =
-      'rounded-xl border p-3 ' + (match ? 'bg-green-50' : 'bg-amber-50');
-
-    // Type + teaching note
-    document.getElementById('questionTypeLine').textContent = data.question_type;
-    const t = (data.teaching_notes && data.teaching_notes[data.primary_label]) ||
-              'Consider how the question shape affects the answer.';
-    document.getElementById('teachingLine').textContent = t;
-
-    // Reveal
-    resultsEl.classList.remove('hidden');
-    // Focus for accessibility
-    resultsEl.setAttribute('tabindex', '-1');
-    resultsEl.focus();
-  };
-})();
-</script>
+  loadCase();
+  </script>
 </body>
 </html>
